# stratetrees

./: .gitignore  LICENSE  README.md  README_package.md  combine_results.py  counter_example.py  draw_svg.py  draw_tree.py  dtcontrol_experiments.py  log2ctrl.py  main.py  make_dtcontrol.py  manage.py  notes.md  old_readme.md  playtest.py  pyproject.toml  requirements.txt  run_all.sh  run_experiments.py  run_my_experiments.py  setup.py  smc2py.py  testStrategy.json
article/: abstract.tex  experiments.tex  ieeeconf.cls  ijcai24.tex  introduction.tex  main.tex  methods.tex  old_stuff.tex  preliminaries.tex  qTreeConversion.tex  references.bib
article/nwpt23/: main.tex  references.bib
automated/bouncing_ball/: evaluate.sh  make_samples.sh  model.xml  queries.q
automated/cartpole/: qt_strategy.json
automated/dcdc_boost_converter/: make_eval_query.sh  make_samples.sh  model.xml  qt_strategy.json
automated/isola/: make_eval_query.sh  make_samples.sh  model.xml  qt_strategy.json
automated/random_walk/: make_eval_query.sh  make_samples.sh
automated/traffic_light/: evaluate.sh  make_eval_query.sh  make_samples.sh  model.xml  qt_strategy.json
examples/: README.md  cartpole_3d.json  exampleStrategy.json
experiments/: combine_results.py  commands.py  counter_example.py  experiments.py  main.py  test_heuristics.py  test_pipeline.py  utils.py
stratetrees/: advanced.py  commands.py  loaders.py  models.py  smc2py.py  utils.py  wrappers.py
texts/: bigPicture.tex  qTreeAlgorithm.tex
trees/: advanced.py  commands.py  loaders.py  models.py  nodes.py  safety.py  utils.py
(+116 files in other folders)
